[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/SceneScripts/DraftWinston.gd" type="Script" id=1]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/UI/CardDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/DeckDisplay.tscn" type="PackedScene" id=4]

[node name="Draft" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardHolder" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 32.0
margin_top = 64.0
margin_right = 84.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TakeLeaveCenter" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonZ" type="Node2D" parent="TakeLeaveCenter"]
position = Vector2( -492, -280 )
z_index = 99

[node name="TakeButton" type="Button" parent="TakeLeaveCenter/ButtonZ"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 326.5
margin_top = 63.5
margin_right = 441.5
margin_bottom = 88.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Take Cards"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveButton" type="Button" parent="TakeLeaveCenter/ButtonZ"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 580.0
margin_top = 63.5
margin_right = 700.0
margin_bottom = 88.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Leave Cards"

[node name="ShowHideButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -212.0
margin_right = -76.0
margin_bottom = -192.0
grow_horizontal = 2
text = "Show Cards"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardDisplay" parent="." instance=ExtResource( 3 )]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -104.0
margin_bottom = -64.0
z_index = 2

[node name="OrderDisplay" type="Control" parent="."]
margin_left = 32.0
margin_top = 128.0
margin_right = 72.0
margin_bottom = 168.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="OrderDisplay"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="OrderDisplay"]
margin_left = -4.0
margin_top = -4.0
margin_right = 134.0
margin_bottom = 23.0
border_color = Color( 0, 0, 0, 1 )
border_width = 2.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="OrderDisplay"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckDisplayControl" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckDisplay" parent="DeckDisplayControl" instance=ExtResource( 4 )]
position = Vector2( -120, 75 )

[connection signal="pressed" from="QuitButton" to="." method="quitButtonPressed"]
[connection signal="pressed" from="TakeLeaveCenter/ButtonZ/TakeButton" to="." method="onTakeButtonPressed"]
[connection signal="pressed" from="TakeLeaveCenter/ButtonZ/LeaveButton" to="." method="onLeaveButtonPressed"]
[connection signal="pressed" from="ShowHideButton" to="." method="showHideButtonPressed"]
